# pypckgs_sp

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pypckgs_sp.rst
tests/: test_pypckgs_sp.py
